🔧 config: Enhance .gitignore with additional patterns
- Added cache directories (.cache, .parcel-cache)
- Added temporary folders (tmp, temp)
- Better protection against unwanted files
- Improved development workflow

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,14 @@ coverage/
 # nyc test coverage
 .nyc_output
 
+# Cache directories
+.cache/
+.parcel-cache/
+
+# Temporary folders
+tmp/
+temp/
+
 # Temporary folders
 tmp/
 temp/
